add local auth and remove dev log statements

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm": "^2.5.1",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
+    "passport-local": "^1.0.0",
     "passport-oauth2": "^1.1.2",
     "passport.socketio": "^3.4.1",
     "pg": "^4.4.0",
