--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bower": "^1.3.12",
     "bower-files": "^3.4.4",
+    "connect-redis": "^2.4.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "dotenv": "^1.0.0",
@@ -32,6 +33,7 @@
     "passport-oauth2": "^1.1.2",
     "passport.socketio": "^3.4.1",
     "pg": "^4.4.0",
+    "redis": "^0.12.1",
     "socket.io": "^1.3.4",
     "streamqueue": "^0.1.3",
     "yargs": "^3.4.5"
