--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-oauth2": "^1.1.2",
     "passport.socketio": "^3.4.1",
     "pg": "^4.4.0",
+    "pg-promise": "^1.8.0",
     "redis": "^0.12.1",
     "socket.io": "^1.3.4",
     "streamqueue": "^0.1.3",
