--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "postinstall": "bower install && gulp scripts --production && gulp css --production"
+    "preinstall": "bower install && gulp scripts --production && gulp css --production",
+    "start": "node app.js"
   },
   "dependencies": {
     "bower": "^1.3.12",
