--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "preinstall": "bower install && gulp scripts --production && gulp css --production",
+    "preinstall": "bower install && tsd reinstall & gulp scripts --production && gulp css --production",
     "start": "node app.js"
   },
   "dependencies": {
@@ -21,7 +21,6 @@
     "gulp-if": "^1.2.5",
     "gulp-minify-css": "^0.5.1",
     "gulp-sourcemaps": "^1.5.0",
-    "gulp-tsd": "0.0.4",
     "gulp-typescript": "^2.4.2",
     "gulp-uglify": "^1.1.0",
     "install": "^0.1.8",
@@ -37,6 +36,7 @@
     "redis": "^0.12.1",
     "socket.io": "^1.3.4",
     "streamqueue": "^0.1.3",
+    "tsd": "^0.6.3",
     "yargs": "^3.4.5"
   },
   "engines": {
