--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ typings
 public/app/**/*.js
 public/app/**/*.js.map
 
-public/generated/output.js
-public/generated/output.css
+public/generated/
+server/generated/
