--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-concat": "^2.5.2",
     "gulp-if": "^1.2.5",
     "gulp-minify-css": "^0.5.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "^2.4.2",
     "gulp-uglify": "^1.1.0",
