--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "GoTime": "theyelllowdart/GoTime#9615fc16fb5605d6cb9a46d36468610df8fbe0d4",
     "moment": "~2.10.3",
     "moment-duration-format": "~1.3.0",
-    "angular-cookie": "~4.0.9"
+    "angular-cookie": "~4.0.9",
+    "requirejs": "~2.1.20"
   }
 }
