--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "bower-files": "^3.4.4",
     "connect-redis": "^2.4.1",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
+    "debug": "^2.1.3",
     "dotenv": "^1.0.0",
     "errorhandler": "^1.4.2",
-    "express": "~4.11.1",
+    "express": "^4.11.2",
     "express-session": "^1.10.2",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
@@ -22,12 +22,14 @@
     "gulp-minify-css": "^0.5.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.5.0",
-    "gulp-typescript": "^2.4.2",
+    "gulp-typescript": "^2.8.0",
     "gulp-uglify": "^1.1.0",
     "install": "^0.1.8",
     "lodash": "^3.3.0",
-    "npm": "^2.5.1",
+    "node-uuid": "^1.4.3",
+    "npm": "^2.14.0",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
     "passport-local": "^1.0.0",
