--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-replace": "^0.5.4",
+    "gulp-requirejs-optimize": "0.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-typescript": "^2.8.0",
     "gulp-uglify": "^1.1.0",
@@ -34,10 +35,11 @@
     "passport-google-oauth": "^0.1.5",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.1.2",
-    "passport.socketio": "^3.4.1",
+    "passport.socketio": "3.5.1",
     "pg": "^4.4.0",
     "pg-promise": "^1.8.0",
     "redis": "^0.12.1",
+    "requirejs": "2.1.20",
     "socket.io": "^1.3.4",
     "streamqueue": "^0.1.3",
     "tsd": "^0.6.3",
